# ServerBackend.Frontend.1st.try

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp  main.h
frontend/: package-lock.json
frontend/src/: App.vue
